app/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apis-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: "nginx"
  tls:
  - hosts:
    - dp-api.bluewhale.team
    secretName: temp-app-tls
  rules:
  - host: dp-api.bluewhale.team
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: dp-apis
            port:
              number: 5000
